--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
     "jit-grunt": "^0.9.1",
-    "jshint-stylish": "^1.0.0",
+    "jshint-stylish": "^2.0.1",
     "karma-jasmine": "*",
     "karma-phantomjs-launcher": "*",
-    "time-grunt": "^1.0.0"
+    "time-grunt": "^1.2.1",
+    "grunt-cli": "^0.1.13"
   },
   "engines": {
     "node": ">=0.10.0"
