--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "font-awesome": "^4.6.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
@@ -23,7 +24,9 @@
       "main": [
         "less/bootstrap.less",
         "dist/css/bootstrap.css",
-        "dist/js/bootstrap.js"
+        "dist/js/bootstrap.js",
+        "less/font-awesome.less",
+        "css/font-awesome.css"
       ]
     }
   }
