--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "grunt-angular-templates": "^0.5.7",
     "grunt-autoprefixer": "^2.0.0",
     "grunt-aws-s3": "^0.14.0",
+    "grunt-cli": "^0.1.13",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
@@ -29,8 +30,7 @@
     "jshint-stylish": "^2.0.1",
     "karma-jasmine": "*",
     "karma-phantomjs-launcher": "*",
-    "time-grunt": "^1.2.1",
-    "grunt-cli": "^0.1.13"
+    "time-grunt": "^1.4.0"
   },
   "engines": {
     "node": ">=0.10.0"
