--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,6 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.3.0",
-    "bootstrap": "^3.2.0",
     "angular-animate": "^1.3.0",
     "angular-aria": "^1.3.0",
     "angular-cookies": "^1.3.0",
@@ -12,7 +11,8 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "font-awesome": "^4.6.3"
+    "font-awesome": "^4.6.3",
+    "fontawesome": "^5.8.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
@@ -22,9 +22,6 @@
   "overrides": {
     "bootstrap": {
       "main": [
-        "less/bootstrap.less",
-        "dist/css/bootstrap.css",
-        "dist/js/bootstrap.js",
         "less/font-awesome.less",
         "css/font-awesome.css"
       ]
