--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "grunt-contrib-imagemin": "^1.0.0",
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-uglify": "^5.2.1",
-    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-filerev": "^2.1.2",
     "grunt-karma": "*",
     "grunt-newer": "^1.1.0",
@@ -29,6 +29,7 @@
     "jshint-stylish": "^2.0.1",
     "karma-jasmine": "*",
     "karma-phantomjs-launcher": "*",
+    "serve-static": "^1.15.0",
     "time-grunt": "^1.4.0"
   },
   "engines": {
@@ -38,6 +39,10 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "grunt-google-cdn2": "^0.6.0"
+    "decompress": "^4.2.1",
+    "grunt-google-cdn2": "^0.6.0",
+    "json-schema": "^0.4.0",
+    "lodash": "^4.17.21",
+    "minimist": "^1.2.6"
   }
 }
